--- a/nest-hole/package.json
+++ b/nest-hole/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.4.15",
     "@prisma/client": "^6.2.1",
+    "axios": "^1.7.9",
+    "leaflet": "^1.9.4",
     "multer": "^1.4.5-lts.1",
     "prisma": "^6.2.1",
     "reflect-metadata": "^0.2.0",
@@ -36,6 +38,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/leaflet": "^1.9.16",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
