--- a/next-hole/package.json
+++ b/next-hole/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
+    "@uploadthing/react": "^7.1.5",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -24,7 +25,8 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.4.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
