--- a/nest-hole/package.json
+++ b/nest-hole/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^6.2.1",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
