--- a/nest-hole/package.json
+++ b/nest-hole/package.json
@@ -27,6 +27,8 @@
     "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^6.2.1",
     "axios": "^1.7.9",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "leaflet": "^1.9.4",
     "multer": "^1.4.5-lts.1",
     "prisma": "^6.2.1",
