--- a/nest-hole/package.json
+++ b/nest-hole/package.json
@@ -29,12 +29,14 @@
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "imagemin": "^9.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
     "leaflet": "^1.9.4",
     "multer": "^1.4.5-lts.1",
+    "png-to-jpeg": "^1.0.1",
     "prisma": "^6.2.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "sharp": "^0.33.5"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
